View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029507 | Open CASCADE | OCCT:Visualization | public | 2018-02-14 12:43 | 2018-06-29 21:21 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029507: Visualization, TKOpenGl - uninitialized class field OpenGl_FrameBuffer::myIsOwnDepth | ||||
Description | Patch for 0027925 introduced a new class field OpenGl_FrameBuffer::myIsOwnDepth, which is left uninitialized within constructor. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR29507 has been created by kgv. SHA-1: b6dbd77b4d1c27b2cb7a88bc2f03f825e610208c Detailed log of new commits: Author: kgv Date: Wed Feb 14 16:10:48 2018 +0300 0029507: Visualization, TKOpenGl - uninitialized class field OpenGl_FrameBuffer::myIsOwnDepth |
|
Please take the patch, regression testing is not needed. |
|
Branch CR29507 has been deleted by kgv. SHA-1: b6dbd77b4d1c27b2cb7a88bc2f03f825e610208c |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-02-14 12:43 | kgv | New Issue | |
2018-02-14 12:43 | kgv | Assigned To | => kgv |
2018-02-14 12:43 | kgv | Relationship added | child of 0027925 |
2018-02-14 16:12 | git | Note Added: 0073986 | |
2018-02-14 16:13 | kgv | Note Added: 0073988 | |
2018-02-14 16:13 | kgv | Assigned To | kgv => bugmaster |
2018-02-14 16:13 | kgv | Status | new => resolved |
2018-02-14 16:13 | kgv | Status | resolved => reviewed |
2018-02-14 16:49 | apn | Test case number | => Not needed |
2018-02-14 16:49 | apn | Status | reviewed => tested |
2018-02-18 13:00 | apn | Changeset attached | => occt master 12d6e155 |
2018-02-18 13:00 | apn | Assigned To | bugmaster => apn |
2018-02-18 13:00 | apn | Status | tested => verified |
2018-02-18 13:00 | apn | Resolution | open => fixed |
2018-03-06 15:50 | git | Note Added: 0074290 | |
2018-06-29 21:16 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:21 |
|
Status | verified => closed |